--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -20,7 +20,7 @@
             <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="Project Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ProjectTimeSheet", "Timesheets")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="Payroll" value="Payroll" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payrolls")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="Product" value="Add Product" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Products")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="To-Do-List" value="To-Do-List" class="btn btn-primary" onclick="location.href='@Url.Action("ViewTasks", "Tasks")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="To-Do-List" value="To-Do-List" class="btn btn-primary" onclick="location.href='@Url.Action("Index" ,"Tasks")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="My Payslip" value="My Payslip" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payslip")'" /></td>
 
 
