--- a/TSAR/Views/Payslip/Index.cshtml
+++ b/TSAR/Views/Payslip/Index.cshtml
@@ -1,19 +1,21 @@
-﻿@model IEnumerable<TSAR.Models.Payroll>
+﻿@using Microsoft.AspNet.Identity
 
 @{
-    ViewBag.Title = "Index";
+  ViewBag.Title = "Index";
+  Layout = "~/Views/Shared/_Payslip.cshtml";
 }
 
-<h2>Index</h2>
-
-
+<h2 style="color: black">Payslip for @User.Identity.GetUserName()</h2>
+<br />
+<br />
+<br />
 <div>
-    <h4>Payslip for @DateTime.Now.ToString("MMMM") </h4>
+    <h4>Payslip for @DateTime.Now.ToString("MMMM")</h4>
 
     <table>
         <tr>
             <td>
-                <h4 align="left" style="color: black"> Basic Salary:</h4><a> @*R @Html.DisplayFor(model => model.Basic)*@  Viewbag.Basic </a>
+                <h4 align="left" style="color: black"> Basic Salary:</h4><a>   @ViewBag.Basic </a>
             </td>
 
             <td>   </td>
@@ -24,7 +26,7 @@
         </tr>
         <tr>
             <td>
-                <h4 style="color: black" align="center">Commission at 20% of @ViewBag.NoTimesheets Timesheets :</h4> <a style="text-align:end">R @ViewBag.Comm</a>
+                <h4 style="color: black" align="center">Commission at 20% of @ViewBag.NoTimesheets Timesheets :</h4> <a style="text-align:end"> @ViewBag.Comm</a>
 
             </td>
         </tr>
@@ -49,6 +51,5 @@
             @*<td>@Html.DisplayFor(model => model.total) @ViewBag.Net</td>*@
         </tr>
     </table>
-    
 
 </div>
