--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -64,7 +64,13 @@
     <tr>
         <td></td>
         <td></td>
-        <td><input type="button" style="height:50px;width:200px" title="View targets" value="View targets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Target")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="View targets" value="View targets" class="btn btn-primary" onclick="location.href='@Url.Action("TargetChart", "Target")'" /></td>
+       
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+       
         <td><input type="button" style="height:50px;width:200px" title="Create Task" value="Create Task" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Tasks")'" /> </td>
     </tr>
     </tbody>
