--- a/TSAR/Views/Travel/Create.cshtml
+++ b/TSAR/Views/Travel/Create.cshtml
@@ -61,7 +61,7 @@
 
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.TravelRate, htmlAttributes: new { @class = "control-label" })
             </div>
@@ -69,9 +69,9 @@
                 @Html.EditorFor(model => model.TravelRate, new { htmlAttributes = new { @class = "form-control", @Value = "3.55" } })
                 @Html.ValidationMessageFor(model => model.TravelRate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label" })
             </div>
@@ -79,7 +79,7 @@
                 @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control", @Id = "Distance" } })
                 @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
 
     </div>
