--- a/TSAR/Views/Tasks/Create.cshtml
+++ b/TSAR/Views/Tasks/Create.cshtml
@@ -17,55 +17,65 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-offset-4 col-md-4">
+                @Html.EditorFor(model => model.Description, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Description, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+            <div align="center">
+            @Html.LabelFor(model => model.StartDate, htmlAttributes: new {@class = "control-label "})
+                </div>
+            <div class="col-md-offset-4 col-md-4">
+                @Html.EditorFor(model => model.StartDate, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.StartDate, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div align="center">
+                @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-offset-4 col-md-4">
                 @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new {@class = "control-label"})
+            </div>
+                <div class="col-md-offset-4 col-md-4">
+                @Html.DropDownList("ConsultantNum", null, htmlAttributes: new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.ConsultantNum, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+            <div align="center">
+                @Html.LabelFor(model => model.Status, htmlAttributes: new {@class = "control-label"})
+            </div>
+                <div class="col-md-offset-4 col-md-4">
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.Status, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-4 col-md-4">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
 
 @section Scripts {
