Fixed ticket and timesheet

--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -16,21 +16,35 @@
             <td><input type="button" style="height:50px;width:200px" title="Apply for Leave" value="Apply for Leave" class="btn btn-primary" onclick="location.href='@Url.Action("MyLeave", "Leaves")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="View Calendar" value="View Calendar" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Calendar")'" /></td>
         </tr>
-        <tr>
-            <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="Project Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ProjectTimeSheet", "Timesheets")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="Payroll" value="Payroll" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payrolls")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="Product" value="Add Product" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Products")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="To-Do-List" value="To-Do-List" class="btn btn-primary" onclick="location.href='@Url.Action("Index" ,"Tasks")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="My Payslip" value="My Payslip" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payslip")'" /></td>
-
-
+    <tr>
+        <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="Project Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ProjectTimeSheet", "Timesheets")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Payroll" value="Payroll" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payrolls")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Product" value="Add Product" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Products")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="To-Do-List" value="To-Do-List" class="btn btn-primary" onclick="location.href='@Url.Action("Index" ,"Tasks")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="My Payslip" value="My Payslip" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payslip")'" /></td>
             
-<td></td>
-            <td></td>
+
+   
+
+    </tr>
+        
+        <tr>
             <td></td>
             <td></td>
 
-        </tr>
+            <td><input type="button" style="height: 50px; width: 200px" title="My Timesheet" value="My Timesheets" class="btn btn-primary" onclick="location.href = '@Url.Action("Index", "Timesheets")'" /></td>
+            <td></td>
+            <td></td>
+       
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
     </tbody>
 </table>
 
