--- a/TSAR/Views/ConsultantRegisters/Create.cshtml
+++ b/TSAR/Views/ConsultantRegisters/Create.cshtml
@@ -17,10 +17,12 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.DateTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
+            <div align="center">
+            @Html.LabelFor(model => model.DateTime, htmlAttributes: new {@class = "control-label "})
+        </div>
+            <div class="col-md-offset-4 col-md-4">
+                @Html.EditorFor(model => model.DateTime, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.DateTime, "", new {@class = "text-danger"})
             </div>
         </div>
 
@@ -43,16 +45,17 @@
         </div>*@
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Send Barcodes" class="btn btn-default" />
+            <div class="col-md-offset-4 col-md-4">
+                <input type="submit" value="Send Barcodes" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div align="center">
+<a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
