--- a/TSAR/Views/ConsultantRegisters/Index.cshtml
+++ b/TSAR/Views/ConsultantRegisters/Index.cshtml
@@ -8,53 +8,57 @@
 <h2>Clock-In History</h2>
 
 <p>
-    @if (ViewBag.HasSentRegister ==false)
+    @if (ViewBag.HasSentRegister == false)
     {
-        <h2>@Html.ActionLink("Send Register", "Create")</h2>  
+        <div align="center">
+            <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Send Register</a>
+        </div>
+
+
 
     }
     else
     {
         <h2>You have already sent the register for today</h2>
     }
-   
+
 </p>
-<table class="table">
+<div style="overflow-x: auto">
+<table class="table bg-light-gray">
     <tr>
-        <th style="color: white">
+        <th>
             @Html.DisplayNameFor(model => model.Consultant.FirstName)
         </th>
-        <th style="color: white">
+        <th>
             @Html.DisplayNameFor(model => model.DateTime)
         </th>
-        <th style="color: white">
+        <th>
             @Html.DisplayNameFor(model => model.BarcodeScanned)
         </th>
         <th></th>
     </tr>
     @if (Model != null)
     {
-        foreach (var item in Model) {
-             <tr>
-                 <td style="color: white">
-                     @Html.DisplayFor(modelItem => item.Consultant.FirstName)
-                 </td>
-                 <td style="color: white">
-                     @if (Model != null)
-                     {
-                         var x = item.DateTime.ToLongDateString();
-                         @Html.DisplayFor(xx => x)
-                     }
-                   
-                 </td>
-                 <td style="color: white">
-                     @Html.DisplayFor(modelItem => item.BarcodeScanned)
-                 </td>
-                 <td>
-      
-                 </td>
-             </tr>
-         }  
+        foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Consultant.FirstName)
+                </td>
+                <td>
+                    @if (Model != null)
+                    {
+                        var x = item.DateTime.ToLongDateString();
+                        @Html.DisplayFor(xx => x)
+                    }
+
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BarcodeScanned)
+                </td>
+                <td></td>
+            </tr>
+        }
     }
     else
     {
@@ -67,3 +71,4 @@
 
 
 </table>
+   </div>
