--- a/TSAR/Views/Travel/Create.cshtml
+++ b/TSAR/Views/Travel/Create.cshtml
@@ -22,14 +22,14 @@
                 @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-4 col-md-offset-4">
-                @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Id", null,"--Select---", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.MClientAddress, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ClientAddress, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYt9as2cjmqUnGKD5POvx0xegcT_z40tw&libraries=places" />
@@ -53,15 +53,15 @@
                         });
                 </script>
 
-                @Html.EditorFor(model => model.MClientAddress, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ClientAddress, new { htmlAttributes = new { @class = "form-control" } })
                 @*@Html.DropDownListFor(model => model.ClientAddress,new List<SelectListItem> { @ViewBag.Address}  ,"---Select---", new { @class = "form-control" })*@
                
-                @Html.ValidationMessageFor(model => model.MClientAddress, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.ClientAddress, "", new { @class = "text-danger" })
             </div>
 
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.TravelRate, htmlAttributes: new { @class = "control-label" })
             </div>
@@ -69,17 +69,17 @@
                 @Html.EditorFor(model => model.TravelRate, new { htmlAttributes = new { @class = "form-control", @Value = "3.55" } })
                 @Html.ValidationMessageFor(model => model.TravelRate, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Distance, htmlAttributes: new { @class = "control-label" })
             </div>
             <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control", @Id = "Distance" } })
+                @Html.EditorFor(model => model.Distance, new { htmlAttributes = new { @class = "form-control", @Id = "Distance", @readonly = true } })
                 @Html.ValidationMessageFor(model => model.Distance, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
 
     </div>
