--- a/TSAR/css/agency.css
+++ b/TSAR/css/agency.css
@@ -248,7 +248,7 @@ header {
 }
 
 header .Payslip {
-    background-image: url('../img/elephant22.jpg');
+    background-image: url('../img/TSAR1.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
